<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/layout_half_padding"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:id="@+id/mcv_itens_listas"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_main"
        android:padding="@dimen/layout_half_padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/cl_main"
            app:layout_constraintStart_toStartOf="@+id/cl_main"
            app:layout_constraintEnd_toStartOf="@id/tv_itens_listas_description"/>

        <TextView
            android:id="@+id/tv_itens_listas_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:ellipsize="end"
            tools:text="ljlkjlkjlkjlkjlkj ljlkjljlkjlkj ljljlkjlkjlkjlkj lkjlkjlkljlljlkjlkklj"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toTopOf="@+id/cb_item"
            app:layout_constraintStart_toEndOf="@+id/cb_item"
            app:layout_constraintEnd_toStartOf="@+id/btn_itens_lista_edit"
            app:layout_constraintBottom_toBottomOf="@+id/cb_item"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_itens_lista_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_half_padding"
            android:backgroundTint="@color/white"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:minWidth="0dp"
            app:icon="@drawable/ic_edit"
            app:iconTint="@color/black"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toEndOf="@id/cl_main"
            app:layout_constraintTop_toTopOf="@+id/cl_main" />

        <TextView
            android:id="@+id/tv_itens_listas_total_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_symbol_currecy"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toBottomOf="@+id/cb_item"
            app:layout_constraintStart_toStartOf="@id/cb_item"
            app:layout_constraintBottom_toTopOf="@id/til_listas_qtd"
             />

        <TextView
            android:id="@+id/tv_itens_listas_total_item_valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="23,00"
            android:layout_marginLeft="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintStart_toEndOf="@id/tv_itens_listas_total_item"
            app:layout_constraintBottom_toBottomOf="@id/tv_itens_listas_total_item"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_listas_qtd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/til_title_item_lista_qtd"
            android:layout_marginTop="@dimen/layout_half_padding"
            app:layout_constraintTop_toBottomOf="@id/tv_itens_listas_total_item"
            app:layout_constraintStart_toStartOf="@id/cl_main"
            app:layout_constraintEnd_toStartOf="@+id/til_listas_valor"
            app:layout_constraintBottom_toBottomOf="@id/cl_main">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_listas_valor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/til_title_item_lista_price"
            app:layout_constraintTop_toTopOf="@id/til_listas_qtd"
            app:layout_constraintStart_toEndOf="@id/til_listas_qtd"
            app:layout_constraintEnd_toEndOf="@+id/btn_itens_lista_refresh"
            app:layout_constraintBottom_toBottomOf="@id/til_listas_qtd">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_itens_lista_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="@dimen/layout_half_padding"
            android:backgroundTint="@color/white"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:minWidth="0dp"
            android:enabled="true"
            app:icon="@drawable/ic_refresh"
            app:iconTint="@color/black"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintTop_toTopOf="@+id/til_listas_valor"
            app:layout_constraintStart_toEndOf="@+id/til_listas_valor"
            app:layout_constraintBottom_toBottomOf="@+id/til_listas_valor"
            app:layout_constraintEnd_toEndOf="@id/cl_main"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>